--- a/donate.html
+++ b/donate.html
@@ -13,10 +13,18 @@
             <span class="slider" id="toggle"></span>
           </label>
           <form class="form" action="/submit" method="post">
-            <label for="name">ENTER NAME / ORGANIZATION</label><br>
-            <input type="text" id="name" name="name" placeholder="Enter your name or name of organization" required><br>
-            <label for="amount">ENTER AMOUNT (IN CFA)</label><br>
-            <input type="number" id="amount" name="amount" placeholder="Enter amount" required><br>
+            <label class="name"for="name">ENTER NAME / ORGANIZATION</label><br>
+            <input type="text" id="name-box" name="name" required><br>
+            <label class="amount"for="amount">ENTER AMOUNT (IN CFA)</label><br>
+            <input type="number" id="amount-box" name="amount" required><br>
             <button class="donate" type="submit">Donate</button>
+            <input class="checkbox" type="checkbox" id="toggle">
         </form>
+        <input type="checkbox" id="checkbox" name="myCheckbox" checked>
+        <label class="checkbox-text" for="checkbox-text">I am donating out of free will and love for the mission</label>
+        <div class="donate-text1"> BY DONATING TO THE COMPANY, YOU ARE HELPING TO MAKE THE DREAMS OF THE KIDS ALL OVER THE COUNTRY WHO DREAM TO BE GREAT AND MAKE OUR NATION GREAT, TO ACHIEVE THEIR GOAL. BE A PART OF THIS JOURNEY AS WE MAKE THE DREAMS OF THE YOUNG OONES COME THROUGH BY BRINGING THE WONDERS OOF TECHNOLOGY TO THEM. THANK YOU  </div>
+        <div class="donate-text2"> YOUR DONATION, NO MATTER HOW BIG, WILL CHANGE A LIFE.  </div>
+        <div class="donate-text3"> FOR MORE INFORMATION CONTACT US  </div>
+        <div class="contact"><span class="line-md--phone-call-loop"></span> <a href="tel:phonenumber"><ul> <li>+237 6 53 90 65 94</li><li>+237 6 93 83 42 54</li></ul></a></div>
+        <div class="email"><span class="clarity--email-solid"></span> <a href="kamlewa.technologies@gmail.com">kamlewa.technologies@gmail.com</a></div>
     </body>
