--- a/index.html
+++ b/index.html
@@ -1,93 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kamlewa.org</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-    <div class="container">
-           <div class="overlay"> </div>
-           <div class="landing-image">
-                <img src="images/Landing page1.jpeg" >
-            </div>
-        <div class="par1"> </div> 
-        <div class="par2"> </div> 
-        <div class="par3"> </div> 
-        <button class="donate">Donate</button>
-        <div class="big-text1">Innovating Cybersafety and Inspiring Growth</div>
-        <div class="logo-text">KAMLEWA TECHNOLOGIES</div>
-            <nav>
-                <ul>
-                  <li><a href="#">Home <span class="fe--arrow-down"></span></a></li>
-                  <li><a href="#">Our Communities <span class="fe--arrow-down"></span></a></li>
-                  <li><a href="#">Projects <span class="fe--arrow-down"></span></a></li>
-                  <li><a href="#">Events <span class="fe--arrow-down"></span></a></li>
-                  <li><a href="#">Contacts <span class="fe--arrow-down"></span></a></li>
-                </ul>
-              </nav>
-              <button class="SignUp">SignUp</button>
-        <div class="ach-block"> </div>
-        <div class="ach-block-text">
-            <h1 class="ach">Achievements and Impact</h1>
-            <h1 class="h11">100+</h1>
-            <h4 class="h41">HOURS OF LESSONS</h4>
-            <h1 class="h12">18+</h1>
-            <h4 class="h42">VOLUNTEER MENTORS</h4>
-            <h1 class="h13">25%</h1>
-            <h4 class="h43">INCREASE IN UNDERPREVILEDGE SKILLS</h4>
-            <h1 class="h14">90%</h1>
-            <h4 class="h44">ATTENDANCE RATE</h4>
-            <h1 class="h15">+95</h1>
-            <h4 class="h45">POSITIVE FEEDBACK</h4>
-            <h1 class="h16">5+</h1>
-            <h4 class="h46">SCHOLARSHIPS AWARDED</h4>
-            <h4 class="h4">vhgverygfrhbdfvfhbvfkgfkhbgfhbbhbkfnkngfgkhfbbkkbbdfhvhdgfvkbdnbfhbvhbgbgh nbv bvcgfchgchgfgvhfcgfyfgmbbbhbgktgtbktbhbghtyygyerufhkrshkurghrgbyrgfurygfrtferfvrhnfrhgrhfvhgfhevhfvhgvehrgfvrhgfrvgvrhfvrhgfvrghfgyureygkliurhieurguytirygkutygietuhteurhuegfyguhfdud
-                hhshkrufgrygferufhkurhfkaghrgfybgrah,ruehey,gsrehgehkrdhguthg</h4>
-            <button class="volunteer">Volunteer With Us <span class="mi--arrow-right"></span></button>
-        </div>
-        <div class="vision">
-            <span class="game-icons--binoculars"></span>
-            <div class="vision-text"><h4>A world where everyone, regardless of their
-                background, has the opportunity to learn about and
-                use technology to create a better future for
-                themselves and their communities.</h4> <h1>VISION</h1> </div>
-        </div>
-        <div class="mission">
-            <span class="streamline--module-puzzle-3-solid"></span>
-            <div class="mission-text"><h4>To Foster Technology-driven development
-                and empowerment within our community.</h4> <h1>MISSION</h1> </div>
-        </div>
-        <div class="overlay2"> </div>
-        <div class="landing-image2"><img src="futuristic tech.jpeg"</div>
-        <div class="goals">
-            <span class="mage--goals"></span> <span class="ph--diamond-fill"></span> <h1>GOALS</h1> <h4>Ignite Startups By Breaching the Gap between them and established Incubators and Incubators</h4>
-            <div class="goals-square"> </div>  <div class="goals-picture"><img src="images/goals image.jpeg"></div> 
-        </div>
-        <div class="overlay3"> </div>
-        <div class="landing-image3"><img src="futuristic tech.jpeg"></div>
-        <div class="overlay4"> </div>
-        <div class="landing-image4"><img src="images/landing image4.jpeg">
-            <div class="square-outline"><span class="ph--hand-fist"></span> </div>
-            <div class="square-outline2"> </div><span class="material-symbols-light--security-rounded"></span>
-            <div class="outline-text1">
-                <ul>
-                    <li>EMPOWERING UNDERPREVILEDGED COMMUNITIES</li>
-                    <li>BRIDGING THE DIGITAL DIVIDE</li>
-                    <li>PROMOTING CYBERSECURITY AWARENESS</li>
-                    <li>DIGITAL INCLUSION AND RURAL ACTION</li>
-                </ul>
-            </div>
-            <div class="outline-text2">
-                <ul>
-                    <li>CYBERSECURITY ADVOCACY</li>
-                    <li>COMMUNITY SUPPORT</li>
-                    <li>KNOWLEDGE SHARING</li>
-                    <li>INNOVATION AND COLLABORATION</li>
-                </ul>
-            </div>
-         </div>
-    </div>
-    
+<head>
+  <title>KAMLEWA TECHNOLOGIES</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+</head>
+<body>
+<div class="overlay"> </div>
+<img class="img1"src="images/Landing page1.jpeg">
+<img class="img2"src="futuristic tech.jpeg">
+<img class="img3"src="images/landing image3.jpeg">
+<div class="title">KAMLEWA TECHNOLOGIES</div>
+<div class="nav">
+    <ul>
+        <li>Home <span class="ep--arrow-down-bold"></span></li></li>
+        <li>Our Communities <span class="ep--arrow-down-bold"></span></li></li>
+        <li>Projects <span class="ep--arrow-down-bold"></span></li>
+        <li>Events <span class="ep--arrow-down-bold"></span></li></li>
+        <li>Contact <span class="ep--arrow-down-bold"></span></li></li
+    </ul>
+</div>
+<div class="SignUp">SignUp</div>
+<div class="logo"><img src="images/kamlewalogowhite.png"></div>
+<div class="block">
+    <h3>Achievements</h3>
+    <h1>Achievements and Impact</h1>
+    <h5>nbcjbbrjhbnbcjnbcjbbrjhbfkrfhrifkbjgfurygfrgfirnhhbjgvhfvgc rhguygfurgf gugbbrjhbfkrfhrifkbjgfurygfrgfirnhhbjgvhfvgc rhguygfurgf gugfkrfhrifkbjgfurygfrgfirnhhbjgvhfvgc rhguygfurgf gugfkufugfugfeufgeugeufyuegfrugeuyfgyubhftykuutft</h5>
+    <h4>Volunteer with us <span class="gg--arrow-right"></span></h4>
+
+    <h1 class="h100">100+</h1>
+    <h1 class="h18">18+</h1>
+    <h1 class="h25">25%</h1>
+    <h1 class="h90">90%</h1>
+    <h1 class="h95">+95</h1>
+    <h1 class="h5">5+</h1>
+    <H4 class="hours">HOURS OF LESSONS</H4>
+    <h4 class="Volunteer">VOLUNTEER MENTORS</h4>
+    <h4 class="increase">INCREASE IN UNDERPREVILEDGE SKILLS</h4>
+    <h4 class="attendance">ATTENDANCE RATE</h4>
+    <h4 class="positive">POSITIVE FEEDBACK</h4>
+    <h4 class="scholar">SCHOLARSHIPS AWARDED</h4>
+ </div>
+</div>
+</body>
 </html>
+
