--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="overlay"> </div>
+<div class="overlay" id="top"> </div>
 <img class="img1"src="images/Landing page1.jpeg">
 <img class="img2"src="futuristic tech.jpeg">
 <img class="img3"src="images/landing image3.jpeg">
 <div class="title">KAMLEWA TECHNOLOGIES</div>
 <div class="nav">
     <ul>
-        <li>Home <span class="ep--arrow-down-bold"></span></li></li>
-        <li>Our Communities <span class="ep--arrow-down-bold"></span></li></li>
-        <li>Projects <span class="ep--arrow-down-bold"></span></li>
-        <li>Events <span class="ep--arrow-down-bold"></span></li></li>
-        <li>Contact <span class="ep--arrow-down-bold"></span></li></li
+        <li><a href="#top">Home <span class="ep--arrow-down-bold"></span></a></li>
+        <li><a href="#">Our Communities <span class="ep--arrow-down-bold"></span></a></li>
+        <li><a href="#">Projects <span class="ep--arrow-down-bold"></span></a></li>
+        <li><a href="#">Events <span class="ep--arrow-down-bold"></span></a></li></li>
+        <li><a href="contactUs.html" target="_blank">Contact <span class="ep--arrow-down-bold"></span></a></li>
     </ul>
 </div>
 <div class="SignUp">SignUp</div>
@@ -27,20 +27,25 @@
     <h1>Achievements and Impact</h1>
     <h5>nbcjbbrjhbnbcjnbcjbbrjhbfkrfhrifkbjgfurygfrgfirnhhbjgvhfvgc rhguygfurgf gugbbrjhbfkrfhrifkbjgfurygfrgfirnhhbjgvhfvgc rhguygfurgf gugfkrfhrifkbjgfurygfrgfirnhhbjgvhfvgc rhguygfurgf gugfkufugfugfeufgeugeufyuegfrugeuyfgyubhftykuutft</h5>
     <h4>Volunteer with us <span class="gg--arrow-right"></span></h4>
-
     <h1 class="h100">100+</h1>
     <h1 class="h18">18+</h1>
     <h1 class="h25">25%</h1>
-    <h1 class="h90">90%</h1>
+    <h1 class="h90">5+</h1>
     <h1 class="h95">+95</h1>
-    <h1 class="h5">5+</h1>
-    <H4 class="hours">HOURS OF LESSONS</H4>
-    <h4 class="Volunteer">VOLUNTEER MENTORS</h4>
-    <h4 class="increase">INCREASE IN UNDERPREVILEDGE SKILLS</h4>
-    <h4 class="attendance">ATTENDANCE RATE</h4>
-    <h4 class="positive">POSITIVE FEEDBACK</h4>
-    <h4 class="scholar">SCHOLARSHIPS AWARDED</h4>
+    <h1 class="h5">90%</h1>
+    <div class="hours">HOURS OF LESSONS</div>
+    <div class="Volunteer">VOLUNTEER MENTORS</div>
+    <div class="increase">INCREASE IN UNDERPREVILEDGE SKILLS</div>
+    <div class="attendance">ATTENDANCE RATE</div>
+    <div class="positive">POSITIVE FEEDBACK</div>
+    <div class="scholar">SCHOLARSHIPS AWARDED</div>
  </div>
+<div class="vision">
+   <h1>  Vision </h1> <h5>A world where everyone, regardless of their
+        background, has the opportunity to learn about and
+        use technology to create a better future for
+        themselves and their communities.</h5>
+</div>
 </div>
 </body>
 </html>
