contact us final touches

--- a/contactUs.html
+++ b/contactUs.html
@@ -43,7 +43,83 @@
         <div class="newsletter-big">OUR NEWSLETTERS</div>
         <div class="newsletter-small">Subscribe to our newsletters to get the latest details from our ever growing community</div>
    </div>
-   <div class="square1"> </div>
-   <div class="square2"> </div>
-   <div class="square3"> </div>
+   <div class="square1"> 
+        <span class="majesticons--phone-retro"></span>
+    <ul class="square1list">
+        <li>+237 653 906 594</li> 
+        <li>+237 693 834 254</li>
+        </ul> 
+    </div>
+   <div class="square2"> 
+    <span class="fontisto--email"></span>
+    <ul class="square2list">
+        <li>kamlewa.technologies@gmail.com</li>
+        <li>kamlewa.technologies@gmail.com</li>
+    </ul>
+   </div>
+   <div class="square3"> 
+    <span class="hugeicons--location-04"></span>
+    <ul class="square3list">
+        <li>1st road st rue avenue</li>
+        <li>1st road st rue avenue</li>
+    </ul>
+   </div>
+   <div class="map">
+    <img src="https://www.bing.com/maps?where=Bafoussam+Cameroon%2C+West+Region++00237%2C+CM&cp=3.865625%7E11.642761&lvl=11.0">
+   </div>
+   <div class="foot"> 
+    <div class="logo-outline"> </div>
+    <div class="logo"><img src="images/kamlewalogoyellow.png" </div>
+    <div class="logo-text">
+        <ul>
+        <li>KAMLEWA TECHNOLOGIES</li>
+        <li id="list-small">Innovating CYBER-SAFETY and your Digital experience</li>
+        </ul>
+    </div>
+    <div class="navigation">
+        <h1>Navigation</h1>
+        <ul>
+            <li><a href="#top">Home</a></li>
+            <li><a href="Pages.htmk">Pages</a></li>
+            <li><a href="About.html">About Us</a></li>
+            <li><a href="Services.html">Services</a></li>
+        </ul>
+    </div>
+    <div class="Quicklinks">
+        <h1>Quick Links</h1>
+        <ul>
+            <li><a href="contactUs.html">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Booking</a></li>
+            <li><a href="#">Pages</a></li>
+        </ul>
+    </div>
+    <div class="Blogs">
+        <h1>Blogs</h1>
+        <ul>
+            <li><a href="twitter">Twitter</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/company/kamlewa/">LinkedIn</a></li>
+        </ul>
+    </div>
+    <div class="foot-icons">
+        <ul>
+            <li><span class="fontisto--email"></span></li>
+            <li><span class="majesticons--phone-retro"></span></li>
+            <li><span class="hugeicons--location-04"></span></li>
+        </ul>
+    </div>
+    <div class="foot-icon-text">
+        <ul>
+            <li id="li1">kamlewa.technologies@gmail.com</li>
+            <li id="li2">+237 68 888 888</li>
+            <li id="li3">1st road st rue avenue</li>
+        </ul>
+    </div>
+<ul class="icons">
+    <li><a href="https://www.linkedin.com/company/kamlewa/"><span class="devicon--linkedin"></span></a></li>
+    <li class="twitter"><span class="skill-icons--twitter"></span></li>
+    <li class="youtube"><span class="logos--youtube-icon"></span></li>
+    <li class="facebook"><span class="devicon--facebook"></span></li>
+</ul>
 </body>
