sign in page incorporation

--- a/contactUs.html
+++ b/contactUs.html
@@ -17,7 +17,7 @@
     <div class="arrow5"><span class="ep--d-arrow-left"></span> </div></span> 
     <div class="arrow6"><span class="ep--d-arrow-left"></span></div>
     <div class="form">
-        <form action="/login" method="post">
+        <form action="/contactUs.html" method="post">
             <div class="input-group">
                 <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
