--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <li><a href="contactUs.html" target="_blank">Contact <span class="ep--arrow-down-bold"></span></a></li>
     </ul>
 </div>
-<div class="SignUp">SignUp</div>
+<div class="SignUp"><a id="signUp"href="signUp.html">SignUp</a></div>
 <div class="logo"><img src="images/kamlewalogowhite.png"></div>
+<div class="donate"><a id="donate"href="donate.html">Donate</a></div>
 <div class="block">
     <h3>Achievements</h3>
     <h1>Achievements and Impact</h1>
