--- a/signUp.html
+++ b/signUp.html
@@ -3,8 +3,8 @@
 <head>
   <title>KAMLEWA TECHNOLOGIES</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="signIn.css">
-  <script src="signIn.js"></script>
+  <link rel="stylesheet" href="signUp.css">
+  <script src="signUp.js"></script>
 
 </head>
 <body>
