landing page update

--- a/index.html
+++ b/index.html
@@ -40,13 +40,56 @@
     <div class="attendance">ATTENDANCE RATE</div>
     <div class="positive">POSITIVE FEEDBACK</div>
     <div class="scholar">SCHOLARSHIPS AWARDED</div>
- </div>
+</div>
 <div class="vision">
    <h1>  Vision </h1> <h5>A world where everyone, regardless of their
         background, has the opportunity to learn about and
         use technology to create a better future for
         themselves and their communities.</h5>
 </div>
+<div class="mission">
+    <h1>  Mission </h1> <h5>To Foster Technology-driven development
+        and empowerment within our community.</h5>
+ </div>
+ <div class="Goals">
+    <h1>  Goals </h1> <h5>Ignite Startups By Breaching the Gap between them and established Incubators and Incubators</h5>
+ </div>
+<div class="diamond1">
+    <span class="ph--diamond-thin"></span> <span class="game-icons--binoculars"></span>
+</div>
+<div class="diamond2">
+    <span class="ph--diamond-thin"></span> <span class="streamline--module-puzzle-3-solid"></span>
+</div>
+<div class="goals-square"> <span class="mage--goals"></span></div>
+<div class="diamond3">
+    <span class="ph--diamond-thin"></span>
+</div>
+<div class="goals-img"> <img src="images/goals image.jpeg" width="300%"></div>
+<div class="commitment"> <h1>COMMITTED TO</h1></div>
+<div class="through"> <h1>THROUGH</h1></div>
+<div class="square1"> 
+    <ul>
+        <li id="square-icon1"><span class="fa6-solid--hand-fist"></span></li>
+        <li>EMPOWERING UNDERPREVILEDGED COMMUNITIES</li>
+        <li>BRIDGING THE DIGITAL DIVIDE</li>
+        <li>PROMOTING CYBER SSECURITY AWARENESS</li>
+    </ul>
+</div>
+<div class="square2"> 
+    <ul>
+        <li id="square-icon2"><span class="carbon--ibm-engineering-workflow-mgmt"></span></li>
+        <li>CYBER SECURITY ADVOCACY</li>
+        <li>COMMUNITY SUPPORT</li>
+        <li>INNOVATION AND COLLABORATION</li>
+        <li>DIGITAL INCLUSION AND RURAL ACTION</li>
+    </ul>
+</div>
+<div class="img4"><img src="images/landing-image4.jpeg" </div>
+<div class="img4-text">Establishment Of Focused Communities</div>
+<div class="img4-icon"><span class="fa6-solid--handshake"></span></div>
+<div class="img4-square"> <h1>IDENTIFY KEY AREAS OF INTEREST OR EXPERTISE WITHIN THE COOMMUNITY. <BR>FACILITATE NETWORKING AND COOLLABORATION AMONG INDIVIDUALS WITH SIMILAR INTERESTS OR GOALS<BR>PROVIDE RESOURCES AND SUPPORT TO HELP THESE COMMUNITIES THRIVE AND GROW.</h1> </div>
+<div class="services"> 
+    <div class="img5"> </div>
 </div>
 </body>
 </html>
