--- a/login.html
+++ b/login.html
@@ -28,4 +28,6 @@
     <span class="guidance--lock"></span>
     </form>
     <a href="#reset password">Forgot password?</a>
+    <h4>Don't have an account?</h4>
+    <a id="signUp" href="signUp.html">SignUp</a>
     </body>
