--- a/contactUs.html
+++ b/contactUs.html
@@ -122,4 +122,5 @@
     <li class="youtube"><span class="logos--youtube-icon"></span></li>
     <li class="facebook"><span class="devicon--facebook"></span></li>
 </ul>
+<h2 class="bottom">KAMLEWA SINCE 20</h2>
 </body>
