--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div class="nav">
     <ul>
         <li><a href="#top">Home <span class="ep--arrow-down-bold"></span></a></li>
-        <li><a href="#">Our Communities <span class="ep--arrow-down-bold"></span></a></li>
+        <li><a href="#communities">Communities <span class="ep--arrow-down-bold"></span></a></li>
         <li><a href="#">Projects <span class="ep--arrow-down-bold"></span></a></li>
-        <li><a href="#">Events <span class="ep--arrow-down-bold"></span></a></li></li>
+        <li><a href="#">Gallery <span class="ep--arrow-down-bold"></span></a></li></li>
         <li><a href="contactUs.html" target="_blank">Contact <span class="ep--arrow-down-bold"></span></a></li>
     </ul>
 </div>
@@ -111,7 +111,7 @@
         <div class="outline6"> </div>
     </div>
 </div>
-<div class="communities"><h1>OUR COMMUNITIES</h1></div>
+<div id="communities"class="communities"><h1>OUR COMMUNITIES</h1></div>
 <table class="comm-table">
     <tr> 
         <td>  <img src="images/skew1.jpeg"><div class="comm-title1">DEVELOPERS
@@ -150,16 +150,59 @@
         <li><img src="images/donate.png"></li>
         <li><img src="images/donate.png"></li>
     </ul>
-    <ul class="l3">
-        <li><img src="images/donate.png"></li>
-        <li><img src="images/donate.png"></li>
-        <li><img src="images/donate.png"></li>
-        <li><img src="images/donate.png"></li>
-        <li><img src="images/donate.png"></li>
-        <li><img src="images/donate.png"></li>
-        <li><img src="images/donate.png"></li>
-    </ul>
 
+</div>
+<div class="footer">
+    <div class="footer-logo"><img src="images/kamlewalogoyellow.png"></div>
+    <div class="footer-logo-outline"> </div>
+    <div class="foot-logo-text">
+         <div id="footh1">KAMLEWA TECHNOLOGIES</div>
+         <div id="footh5">Innovating CYBER-SAFETY and your Digital experience</div>
+    </div>
+    <div class="navigation">
+        <h1>Navigation</h1>
+        <ul>
+            <li><a href="#top">Home</a></li>
+            <li><a href="Pages.htmk">Pages</a></li>
+            <li><a href="About.html">About Us</a></li>
+            <li><a href="Services.html">Services</a></li>
+        </ul>
+    </div>
+    <div class="quicklinks">
+        <h1>Quick Links</h1>
+        <ul>
+            <li><a href="contactUs.html">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Booking</a></li>
+            <li><a href="#">Pages</a></li>
+        </ul>
+    </div>
+    <div class="blogs">
+        <h1>Blogs</h1>
+        <ul>
+            <li><a href="twitter">Twitter</a></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/company/kamlewa/">LinkedIn</a></li>
+        </ul>
+    </div>
+    <div class="foot-icons">
+        <ul>
+            <li><span class="fontisto--email"></span></li>
+            <li><span class="majesticons--phone-retro"></span></li>
+            <li><span class="hugeicons--location-04"></span></li>
+        </ul>
+    </div>
+    <div class="foot-icon-text">
+        <div id="li1">kamlewa.technologies@gmail.com</div>
+        <div id="li2">+237 68 888 888</div>
+        <div id="li3">1st road st rue avenue</div>
+    </div>
+    <ul class="icons">
+        <li><a href="https://www.linkedin.com/company/kamlewa/"><span class="devicon--linkedin"></span></a></li>
+        <li class="twitter"><span class="skill-icons--twitter"></span></li>
+        <li class="youtube"><span class="logos--youtube-icon"></span></li>
+        <li class="facebook"><span class="devicon--facebook"></span></li>
+    </ul>
 </div>
 </body>
 </html>
